app-k8s-config/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app
    namespace: app-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: us-central1-docker.pkg.dev/mike-test-cmdb-gke/mike-test-repo/app:v1
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 1Gi
          ports:
            - containerPort: 3000
        - name: nginx
          image: nginxinc/nginx-unprivileged:1.25.2-alpine
          resources:
            limits:
              cpu: 250m
              memory: 500Mb
            requests:
              cpu: 250m
              memory: 500Mb
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 3000
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-configmap
