app-k8s-config/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: app-ns
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
